JSAI/error/src/test/resources/scoping/v321.js

function self(id) {
	return id;
}

var x = self(1);
print(x);